--- a/.github/workflows/ploomber-cloud.yaml
+++ b/.github/workflows/ploomber-cloud.yaml
@@ -29,7 +29,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install ploomber-cloud hatch
-          pip install solara pytextrank pandas yake python-dotenv
+          pip install solara pytextrank pandas yake
+          pip install python-dotenv
           mkdir -p ploomber/wheels
           (hatch build && cp dist/*.whl ploomber/wheels)
 
