--- a/.github/workflows/ploomber-cloud.yaml
+++ b/.github/workflows/ploomber-cloud.yaml
@@ -23,6 +23,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install discord.py
+          pip install python-dotenv
           python backend/discord/get_messages.py
           
       - name: Install dependencies
