--- a/.github/workflows/ploomber-cloud.yaml
+++ b/.github/workflows/ploomber-cloud.yaml
@@ -44,6 +44,12 @@ jobs:
           export OPENAI_API_KEY="${{ secrets.OPENAI_API_KEY }}"
           python solarathon/pages/__init__.py
       
+      
+      - name: Set Git Config
+        run: |
+          git config user.email "arunprasadh1996@gmail.com"
+          git config user.name "arun-prasadh"
+          
       - name: Move File step
         run: |
           # Replace "source_folder" and "destination_folder" with your actual folder names
@@ -51,7 +57,6 @@ jobs:
           git add solarathon/journal_article.txt
           git commit -m "Move file from source_folder to destination_folder"
           git push origin main  # Adjust the branch name as needed
-
 
 
           
