changes in yaml

--- a/.github/workflows/ploomber-cloud.yaml
+++ b/.github/workflows/ploomber-cloud.yaml
@@ -53,8 +53,8 @@ jobs:
       - name: Move File step
         run: |
           # Replace "source_folder" and "destination_folder" with your actual folder names
-          mv solarathon-faq-creator/data/testing/journal_article.txt solarathon-faq-creator/solarathon/
-          git add solarathon-faq-creator/solarathon/journal_article.txt
+          mv data/testing/journal_article.txt solarathon/
+          git add solarathon/journal_article.txt
           git commit -m "Move file from source_folder to destination_folder"
           git push origin master  # Adjust the branch name as needed
           
