--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
 HAYSTACK_REMOTE_API_TIMEOUT_SEC="300"
+ENV=LOCAL
+BOT_TOKEN="MTE3NjMwNDA5MzI3OTU1MTUzOA.GLgVno.ujK30PEBuAnlNRWEeU2QmfseMqix7Gy-EGpbEc"
+DISCORD_SERVER_ID=1106593685241614489
+DISCORD_CHANNEL_ID=1106593686223069309
+OPENAI_API_KEY=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
+faiss_filename = 'faiss_document_store.db'
