--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 HAYSTACK_REMOTE_API_TIMEOUT_SEC="300"
 ENV=LOCAL
 faiss_filename = 'faiss_document_store.db'
-DEFAULT_DISCORD_MESSAGES=1_500
+DEFAULT_DISCORD_MESSAGES=100 # for test purpose
 DISCORD_ABOUTS="Solara is a new and fantastic framework for development of web app using python"
